src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Jersey+10&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Geist+Pixel&family=Jersey+10&display=swap");
@import "tailwindcss";

@theme {
  --color-primary: oklch(0.7779 0.1381 77);
  --color-accent: oklch(0.8219 0.1696 294.88);
  --color-background: #211f19;
}

html,
body {
  margin: 0;
  width: 100%;
  height: 100%;
  image-rendering: pixelated;
  @apply text-base text-white bg-background;
  font-family: "Geist Pixel", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: "ELSH" 0;
  overflow-y: auto;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Jersey 10", sans-serif;
  font-weight: 400;
  font-style: normal;
  @apply mb-2 text-primary;
}

h1 {
  @apply text-4xl;
}

h2 {
  @apply text-3xl;
}

p {
  @apply my-3;
}

ul {
  @apply list-disc leading-normal text-[0.95rem];
}

ul > li {
  @apply ml-4;
}

ac {
  @apply text-accent;
}

